<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/ultra"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        android:text="@string/Welcome_to_worbi"
        android:textAppearance="@null"
        android:textColor="@color/colorTextPrimary"
        android:textSize="25sp" />

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@drawable/shadow_searchbar"
    android:paddingHorizontal="20dp"
    android:paddingBottom="7dp"
    android:layout_marginHorizontal="20dp">

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:hint="Search anything"
        android:textColor="@color/colorTextSecondary"
        android:textColorHint="#888888"
        android:singleLine="true"
        android:inputType="text" />

    <ImageView
        android:id="@+id/search_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:paddingBottom="6dp"
        android:src="@drawable/baseline_search_24"
        />

</RelativeLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:fontFamily="@font/ultra"

        android:paddingHorizontal="20dp"
        android:paddingBottom="5dp"
        android:paddingTop="10dp"
        android:text="@string/lets_read"
        android:textColor="@color/colorTextPrimary"
        android:textSize="20sp" />
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <TextView
        android:id="@+id/see_books"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:fontFamily="@font/ultra"
        android:paddingHorizontal="20dp"
        android:paddingBottom="5dp"
        android:paddingTop="10dp"
        android:text="@string/see_all"
        android:textColor="#8A8A8A"
        android:textSize="15sp" />
</LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerBooks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:fontFamily="@font/ultra"
        android:paddingHorizontal="20dp"
        android:paddingBottom="5dp"
        android:paddingTop="10dp"
        android:text="@string/lets_play"
        android:textColor="@color/colorTextPrimary"
        android:textSize="20sp" />
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <TextView
        android:id="@+id/see_games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:fontFamily="@font/ultra"
        android:paddingHorizontal="20dp"
        android:paddingBottom="5dp"
        android:paddingTop="10dp"
        android:text="@string/see_all"
        android:textColor="#8A8A8A"
        android:textSize="15sp" />
</LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerGames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp" />
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:fontFamily="@font/ultra"
        android:paddingHorizontal="20dp"
        android:paddingBottom="5dp"
        android:paddingTop="10dp"
        android:text="@string/lets_learn"
        android:textColor="@color/colorTextPrimary"
        android:textSize="20sp" />
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <TextView
        android:id="@+id/see_lessons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:fontFamily="@font/ultra"
        android:paddingHorizontal="20dp"
        android:paddingBottom="5dp"
        android:paddingTop="10dp"
        android:text="@string/see_all"
        android:textColor="#8A8A8A"
        android:textSize="15sp" />
</LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerLessons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp" />
</LinearLayout>